fix parca connection

--- a/platform/ai/k8s/llm-providers/openai/secret.enc.yaml
+++ b/platform/ai/k8s/llm-providers/openai/secret.enc.yaml
@@ -1,23 +1,23 @@
-apiVersion: ENC[AES256_GCM,data:C2c=,iv:UEIQNkzTcftTbfYe4FIF9PP8mCmWY2Y8LlfIaG5mqLo=,tag:aqW4YZevtdjGalIdp/XjZQ==,type:str]
-kind: ENC[AES256_GCM,data:xEKTN5I8,iv:Rk9XX0I7V32nkD+BD5nn7eJCXuvH9IrMXa5z0b5LTYA=,tag:pWGeRpiNkBEO3uO3YpKkiA==,type:str]
+apiVersion: ENC[AES256_GCM,data:cjg=,iv:V47/QzvHWYTK+bTv+WAGuNL7HFA3cj97mXV62pH00mI=,tag:4IcE306iu52rred/GRvYAg==,type:str]
+kind: ENC[AES256_GCM,data:60OYm4lg,iv:w9jyBOR1LUkiawrQzA0yDRiKZOW2GVHR6aKRG3Ryz4c=,tag:Juhl48B59rKwGqzT2lixXA==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:qxB3ayZxtWPFsf15k7xseIeq82td,iv:L8rszmFp+MmnxOpyNg6XhpGapJ/i7PJBNbOPVXMUq5E=,tag:KAqyslCHkZupLdqmi8kIvw==,type:str]
-    namespace: ENC[AES256_GCM,data:vXE=,iv:KsWC6NPXw/G9iH6EdVkXaDCY6e8AKjNQ/LEdz8QAoIk=,tag:B72lZdjH4BixppqPNf12tQ==,type:str]
-type: ENC[AES256_GCM,data:GNA43d4M,iv:KTUDyQI8B2zEW5Clz0tz7c8zVELbf/dd6aoUDCI2yxE=,tag:efsMWM0evi1p7ias4W5MSg==,type:str]
+    name: ENC[AES256_GCM,data:mh1JkW8fYXbk2sY8vOLEQxbY43Su,iv:f70bSy5qwKhduDKDR8XH+Ye/zpUO3LzmfYZ8Q6rGgp4=,tag:Cc15nQ9kz51dVl/eIqz7bA==,type:str]
+    namespace: ENC[AES256_GCM,data:zS4=,iv:i+bTzpCs6XIAvTTCvc8mwsh97r4Btvv9RAq27jOld0E=,tag:mAsoj6uZifJNHV0ejcZnlw==,type:str]
+type: ENC[AES256_GCM,data:/pA4udpM,iv:Qgs2H8nK9JO9oVkTe1mVTYMTzRCnjPoj0bL3glLBI6A=,tag:sQvEWRUoerk1j/euApR3wQ==,type:str]
 stringData:
-    apiKey: ENC[AES256_GCM,data:2QQlGv4W0n4HX/Y8BVzcCiws+Bt3zBIjsq7+rx0TdCGpVAgOOMrKt4sQLAq4Tl/CYRE27zuB4lLfDaOQMqzqaPlIScxA5d45MLKbYad99OwNPCRfbAxfE2Na1k2covXRCl47+iT5aTbUnMvlZGhyt5jEOl+sWnj29dBrpgvFpDtgvN+z0iLmL+k23uRwTOcVKw6C5e1c9PKB+FNKGp2NwGX83h8=,iv:JSE8fiY6RryXguCS0LMX1Xn42MZ1RTWqpU2rEm9t8wc=,tag:mBd8EX0Kkpmz7TeO5O+ZZA==,type:str]
+    apiKey: ENC[AES256_GCM,data:TvxQ8aAdDGtO6Z6yhhe+o/9+u88VzwYazXJIbjgvQOWAJSphr3YhyM0ruW33k35eG09iO8CC0/pwMJKTJEbmeWe2aL2OSar0ot8oMhr19RF6nM66Lv6L7iiwHvP4OVtOS1Z8+eYicR0NQlmWnDgkMZSykACME4000kI4J0/RVvgDTRgE5KLi//9qCVc8gUNI2TaHD4ODOm6bNUOOdahEdXSZ1EM=,iv:Arjl2i2PaQTvekqW9gj9pWhpC/GRNOfI7eKfrVtHI78=,tag:GRdEGHZ31gHQXBpSv4hilQ==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28
-          created_at: "2025-10-30T19:46:39Z"
-          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAE0Yino5bHC7TtmtV3wHHUGAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQM36A8dkzWc1M2KA7dAgEQgDu5+R/xPN7Z66kInT/xVMSSZIUQguzvR4WzzMuqt6kO+XbOXSrQp1ZSq20YQD0o7sZKDRuhWDC/7mrgJA==
+          created_at: "2025-11-07T22:33:08Z"
+          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAEty2Q2LXEvvmj/Ov+LuABfAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMY9ZD9ZZPn1nIuoLqAgEQgDvkMZ3lPKE/wEGx8djk/BNPg37bz+4xc2M8KFwTohxATUjyGri4QCS298S5v2Dc/YZuP7b9Sdc9p5RhMg==
           aws_profile: ""
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-10-30T19:46:40Z"
-    mac: ENC[AES256_GCM,data:maXxrykOAdHYK1/EbFBZAM4AHyrZAMiH05YbS0zsJCWSQd4tUF+oQoShASVTXAlWVjp9RlMzizbR/+H0fGZ03KBp358Oecotkl0n1yJi6vstH2wRXWnVRFGQ8FK6TLF3KqYrrApfenBRAYyA50w2souLjZvs5bnxo8jgsVhKEXU=,iv:VgGncIxLFvzyJ9Z/sYiku2irEtyR+hwE0bJAAtrcv+A=,tag:cD5dv+cPoN4xnrdNO6GjQQ==,type:str]
+    lastmodified: "2025-11-07T22:33:08Z"
+    mac: ENC[AES256_GCM,data:L11PxY1kwlXdJK9/uVSQ6aZis5TJ6lJfFld+/KxrZ4Y0hohxVBTe3CRw8JmUlZaL0LrG2BodhEQBBdYZbdC7i2w62GOFrPgIXicW1oE1FVYk5Wn6EfKSaWQ3HerjXoJXRBA9EfJO8/y3GWePOp2weq8pb5pC6IN7Ig/GZ31E+3E=,iv:SJrwIcpaGG0ExgUtk06QUg6yNx47b3vxq3wHyPbVuHU=,tag:FkB5VRh3RJcZJoV66DEYcg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData|apiVersion|metadata|kind|type)$
     version: 3.8.1
