--- a/platform/observability/kustomization.yaml
+++ b/platform/observability/kustomization.yaml
@@ -13,3 +13,6 @@ helmCharts:
     valuesInline:
       nodeSelector:
         kubernetes.io/hostname: mlops-work-00
+      agent:
+        serviceMonitor:
+          enabled: true
