--- a/platform/ai/k8s/kustomization.yaml
+++ b/platform/ai/k8s/kustomization.yaml
@@ -39,7 +39,7 @@ helmCharts:
           provider: OpenAI
           model: "gpt-4o-mini"
           apiKeySecretRef: openai-api-key-secret
-          apiKeySecretKey: OPENAI_API_KEY
+          apiKeySecretKey: apiKey
         ollama:
           provider: Ollama
           model: "llama3.2"
