fix external callback url for n8n external oauth providers

--- a/kubernetes/charts/homelab-gateway/templates/external-dns-endpoint.yaml
+++ b/kubernetes/charts/homelab-gateway/templates/external-dns-endpoint.yaml
@@ -6,7 +6,11 @@ metadata:
   namespace: kube-system
 spec:
   endpoints:
-    - dnsName: "external.{{ .Values.external.domain }}"
+    - dnsName: "{{ .Values.external.domain }}"
+      recordType: CNAME
+      targets:
+        - {{ .Values.external.tunnel_id }}.cfargotunnel.com
+    - dnsName: "*.{{ .Values.external.domain }}"
       recordType: CNAME
       targets:
         - {{ .Values.external.tunnel_id }}.cfargotunnel.com
