--- a/platform/automation/k8s/n8n/external-httproute.yaml
+++ b/platform/automation/k8s/n8n/external-httproute.yaml
@@ -2,19 +2,17 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: n8n-callback-route
+  name: n8n-external-route
   namespace: automation
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: n8n.homelab.external
+    external-dns.alpha.kubernetes.io/hostname: n8n.teaglebuilt.tech
 spec:
   parentRefs:
     - name: homelab-external-gateway
       namespace: kube-system
+  hostnames:
+    - "n8n.teaglebuilt.tech"
   rules:
-    - matches:
-        - path:
-            type: PathPrefix
-            value: /rest/oauth2-credential/callback
-      backendRefs:
+    - backendRefs:
         - name: n8n-service
-          port: 443
+          port: 80
