fix external gateway

--- a/kubernetes/charts/homelab-gateway/templates/external-gateway.yaml
+++ b/kubernetes/charts/homelab-gateway/templates/external-gateway.yaml
@@ -13,6 +13,9 @@ spec:
       protocol: HTTPS
       port: 443
       hostname: "*.{{ .Values.external.domain }}"
+      allowedRoutes:
+        namespaces:
+          from: All
       tls:
         mode: Terminate
         certificateRefs:
@@ -22,6 +25,9 @@ spec:
       protocol: HTTPS
       port: 443
       hostname: "{{ .Values.external.domain }}"
+      allowedRoutes:
+        namespaces:
+          from: All
       tls:
         mode: Terminate
         certificateRefs:
