--- a/kubernetes/apps/security/cert-manager/kustomization.yaml
+++ b/kubernetes/apps/security/cert-manager/kustomization.yaml
@@ -7,3 +7,5 @@ resources:
   - internal-ca-certificate.yaml
   - internal-ca-issuer.yaml
   - cloudflare-issuer.yaml
+generators:
+  - secrets-generator.yaml
