--- a/kubernetes/helmfile.d/01-bootstrap.gotmpl.yaml
+++ b/kubernetes/helmfile.d/01-bootstrap.gotmpl.yaml
@@ -9,11 +9,13 @@ repositories:
     url: https://coredns.github.io/helm
   - name: csi-driver-nfs
     url: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-nfs/master/charts
+  - name: emberstack
+    url: https://emberstack.github.io/helm-charts
 
 releases:
   - name: reflector
     namespace: kube-system
-    chart: oci://ghcr.io/emberstack/helm-charts/reflector
+    chart: emberstack/reflector
     version: 9.1.12
 
   - name: cilium
