--- a/platform/ai/k8s/llm-providers/nim/models/kustomization.yaml
+++ b/platform/ai/k8s/llm-providers/nim/models/kustomization.yaml
@@ -2,7 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - ollama
-  - openai
-  - anthropic
-  - nim
+  - llama-3.1-8b-instruct.yaml
