--- a/platform/ai/k8s/kustomization.yaml
+++ b/platform/ai/k8s/kustomization.yaml
@@ -3,10 +3,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
+  - crds
   - gateway.yaml
   - storage
   - llm-providers
-  - integrations
   - ui-http-route.yaml
 helmCharts:
   - name: kagent
