--- a/kubernetes/Taskfile.yml
+++ b/kubernetes/Taskfile.yml
@@ -97,3 +97,8 @@ tasks:
     cmds:
       - make helmfile_lock
       - make build_chart_dependencies
+
+  copy-kubeconfig:
+    dir: kubernetes
+    cmds:
+      - cp generated/kubeconfig ~/.kube/config
