fix route to openwebui

--- a/kubernetes/apps/security/cert-manager/secrets.enc.yaml
+++ b/kubernetes/apps/security/cert-manager/secrets.enc.yaml
@@ -1,25 +1,25 @@
-apiVersion: ENC[AES256_GCM,data:eOk=,iv:RRIjlJyEmkJvHkI9owW0JobThVn3yAk/KaqgUWHEm9M=,tag:7TPmk7gbq8pluKLmSq3/4g==,type:str]
-kind: ENC[AES256_GCM,data:J27rDyCL,iv:OoDEE6KPwxourNzeuHEKZDneMZGnd+kCMQOFgX+vpeI=,tag:IqrZzqBhfRrs92SYkpiA9g==,type:str]
+apiVersion: ENC[AES256_GCM,data:IEE=,iv:XpXKokDUNoykAKFaggOzIrgUErsr/+mg5GuJwO1WDaA=,tag:9Nuijn7EuwomZ8R7Sy+dlA==,type:str]
+kind: ENC[AES256_GCM,data:CtIzAOBo,iv:cxvxuXVRKIRKM3dlZDyxsdLm7Vr3loqVF2otHhOxGI0=,tag:CKPgJb04cJpr544KkkRBHQ==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:l6aprUUDZl07I5ZIXFr9Z+ljY6dRtYioew==,iv:D5LeqjnDxHv7a/9bS0r9RI4lRDZRudDlrciNKqytaHw=,tag:9GuFXFt3XpGmCiIgGWO2HQ==,type:str]
+    name: ENC[AES256_GCM,data:1F2958HF8YAo5e4SC2+v7hDbtX8Q+biXkw==,iv:1LJiwpybENiQS9qld7d1FHJ/YRRNDliqvGugr71YIkc=,tag:AyKZpTLnYNWbhTqODk7ALA==,type:str]
     annotations:
-        reflector.v1.k8s.emberstack.com/reflection-auto-enabled: ENC[AES256_GCM,data:72SL5Q==,iv:Mz7Sxv/2mWnc/gZ0buHhNlHSFz4bvjq9Ec4e6ae1lKE=,tag:GCGeS1XnuGtzDj59i4JSVw==,type:str]
-        reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: ENC[AES256_GCM,data:PSDROg==,iv:fkPbpV+sKrYPSYNgKas3Zt6t7KdN7TqbcS2+0/muVpA=,tag:pMvibZAcYBT0CEz/7qB+Sg==,type:str]
-type: ENC[AES256_GCM,data:n55CeoHu,iv:1LVjayHER5DO/abujchdWmH1SHem0wrzWu5Gotan+Ho=,tag:cLWP+9cTxtx2q1Qtyyf4Bw==,type:str]
-data:
-    CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:n0dk3rD2fWol7S/dveTf2SCU7ARXe4f59TwYDCEafUEXiYsmjA==,iv:3Db5m71+/wjygrawv5D77RSkWDHQe2YoQskTnHHv8SY=,tag:ALHwAhrZf2AsbtgWgCFWrw==,type:str]
+        reflector.v1.k8s.emberstack.com/reflection-auto-enabled: ENC[AES256_GCM,data:enr3Pg==,iv:WGfH6rHgwALwAByZx5/FHkAk7/rMI/1BuYh0iWAdwT8=,tag:sqYogaCf6OhLqd3inlKVkw==,type:str]
+        reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: ENC[AES256_GCM,data:EAxVtA==,iv:IpIBMhB6hohvd6cN9jYKxqOykV2RwqYS2+C8nsmJ4nk=,tag:femM937OXqiAiQ6ttRdhSQ==,type:str]
+type: ENC[AES256_GCM,data:3K9q3SZO,iv:I+quqwZOY6RVQZrSrInoxQoSRSQmREQ7iK37qUmTjEo=,tag:UJm+D4eCogaGoekyD0OrdQ==,type:str]
+stringData:
+    CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:oUI0YHHRkPXHvga6vtCcjsbqopzgGMbj00UOUklt0aT7PIVpgQ==,iv:2dUsTruKGFR63+1IjBPk7k+19DxGrABG4BYVW5Q4QHU=,tag:RqKeuSCKYsjH6QtClTqyQg==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28
-          created_at: "2025-12-16T21:32:38Z"
-          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAGRTAx3V0dABBsHfN6e6+PEAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMIczm4PSOGI+mb1a3AgEQgDs01oS2Q6f4vHLB/9lKLCqqVxj43Ynh5Y85os76xERAUDUl6pRtce6tak+fXP4BKiwxbU2bD1Vpl9GjAg==
+          created_at: "2025-12-20T18:13:26Z"
+          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAGo+5+0dsWasSAbQHu9k1P7AAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMQMWERbvr+OV3rKa8AgEQgDu55v6t9mdVw46xF/dVYorc3FpMTUGrs6wxEUEqvnPPPaZK1K022FD+80ygXi1ftMqV/OrX0n3745f5LA==
           aws_profile: ""
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-12-16T21:32:38Z"
-    mac: ENC[AES256_GCM,data:Ql9z38Coa61kD7PZlm0sZTqRhF31YTFQJKAc7PzD0hFa5LV569zunWniFLstwTsflR3QaPXhIgb/pF+hYz8B9kKUici1eaIuHKOYCPJYr8xnwCHQ3k+XS/UD/ikfoAPYPZ7l2WiQUpLqDjgXXuZ+FJnnJjblwvPIlDBog+8uPy0=,iv:x+yK0hTs6zlQB1yIy6Kg9kJnYE/SNQ70MfsJZL5DBEo=,tag:j7xKJeIBPxkpsyu08C5uHw==,type:str]
+    lastmodified: "2025-12-20T18:13:26Z"
+    mac: ENC[AES256_GCM,data:1yep5z6eM+gA0fhdUJ3xbdZzXGtqi8tgVkH6aVAFa+6afSnMaooFPxdl1iYgP3w3Fytea2mfiAnFFF4iXWAm12841m3LoxzAbNQ+EsFDUaI2FbVdhGx51phApDqkIC2Xb2Mw0485IfLcPmGiMxp5juWSf/Ev6qr88qZpDJzXT/4=,iv:EZSkzCmyBkNZwuIo15rcnfq24mUTAe5Pa4sJeWLySus=,tag:LRSAV2N6Vlsc6DRmECxqiQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData|apiVersion|metadata|kind|type)$
     version: 3.8.1
