--- a/platform/ai/k8s/llm-providers/openai/secret.enc.yaml
+++ b/platform/ai/k8s/llm-providers/openai/secret.enc.yaml
@@ -1,23 +1,23 @@
-apiVersion: ENC[AES256_GCM,data:cjg=,iv:V47/QzvHWYTK+bTv+WAGuNL7HFA3cj97mXV62pH00mI=,tag:4IcE306iu52rred/GRvYAg==,type:str]
-kind: ENC[AES256_GCM,data:60OYm4lg,iv:w9jyBOR1LUkiawrQzA0yDRiKZOW2GVHR6aKRG3Ryz4c=,tag:Juhl48B59rKwGqzT2lixXA==,type:str]
+apiVersion: ENC[AES256_GCM,data:zL4=,iv:3hLZ9PLkNP7VMHLn5dRHQVL19gmsDhIJKJhkwrjVbF8=,tag:0dkHNJp/t9CVrQGjnuIUIA==,type:str]
+kind: ENC[AES256_GCM,data:xVPFN2xP,iv:QBXpbX3VPibS4iqNmxEMpHDsJKLf77pPK5fE4dgT2mw=,tag:x8ulKQvxvBLn/PN0Tn47ng==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:mh1JkW8fYXbk2sY8vOLEQxbY43Su,iv:f70bSy5qwKhduDKDR8XH+Ye/zpUO3LzmfYZ8Q6rGgp4=,tag:Cc15nQ9kz51dVl/eIqz7bA==,type:str]
-    namespace: ENC[AES256_GCM,data:zS4=,iv:i+bTzpCs6XIAvTTCvc8mwsh97r4Btvv9RAq27jOld0E=,tag:mAsoj6uZifJNHV0ejcZnlw==,type:str]
-type: ENC[AES256_GCM,data:/pA4udpM,iv:Qgs2H8nK9JO9oVkTe1mVTYMTzRCnjPoj0bL3glLBI6A=,tag:sQvEWRUoerk1j/euApR3wQ==,type:str]
+    name: ENC[AES256_GCM,data:w7ytKcdjtx48vJ9vhlG2NRroWI1z,iv:w24z5JebwgNUO1vdJSxCLXmBZ64PYLvz3+xvpSUjN5M=,tag:EW5zoIwfhiUg9hSDCd4Hdw==,type:str]
+    namespace: ENC[AES256_GCM,data:oAk=,iv:b1VTvPh6++/VXg39CXHnYsi50VuOEnIjQCI3Byt3EMY=,tag:DeEsoFQSLqXxCIZib8IOfA==,type:str]
+type: ENC[AES256_GCM,data:bfxQcxUV,iv:qDeY9XKWkcsYyEpfcOxItd5xL1yq/BHSzGL6Gr5G/sE=,tag:HT8zKTk3NC4TDY65SCPqfA==,type:str]
 stringData:
-    apiKey: ENC[AES256_GCM,data:TvxQ8aAdDGtO6Z6yhhe+o/9+u88VzwYazXJIbjgvQOWAJSphr3YhyM0ruW33k35eG09iO8CC0/pwMJKTJEbmeWe2aL2OSar0ot8oMhr19RF6nM66Lv6L7iiwHvP4OVtOS1Z8+eYicR0NQlmWnDgkMZSykACME4000kI4J0/RVvgDTRgE5KLi//9qCVc8gUNI2TaHD4ODOm6bNUOOdahEdXSZ1EM=,iv:Arjl2i2PaQTvekqW9gj9pWhpC/GRNOfI7eKfrVtHI78=,tag:GRdEGHZ31gHQXBpSv4hilQ==,type:str]
+    Authorization: ENC[AES256_GCM,data:Ef5lSiUWSMUYYvA2Ses68zwGAKFlCYDEBmDoR77lhnIUjcoYW9UaDDUCTvxORl0mO0LPf2uGfbKZN9BsRDIabRtcGOXOY1Yvx+3ODsJ9y8jHRMgwEzrlfBWfI/qi4kiTKhPLv5WtM2aHoWv5FXofPuPn50xqonrlmxM98MnCutkQmR4Ao3cBapsO1vBitstCC3bz10CynD60wYHl40nGadJ/ZU0=,iv:pGNlhoJBML0Sq672Gau6+4bokvHmf6BrYTUGzgjnvs8=,tag:bJsbyCdu75KGwXrR1OHmYg==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28
-          created_at: "2025-11-07T22:33:08Z"
-          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAEty2Q2LXEvvmj/Ov+LuABfAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMY9ZD9ZZPn1nIuoLqAgEQgDvkMZ3lPKE/wEGx8djk/BNPg37bz+4xc2M8KFwTohxATUjyGri4QCS298S5v2Dc/YZuP7b9Sdc9p5RhMg==
+          created_at: "2025-12-20T17:02:06Z"
+          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAGO/QgMSOUBHObeIW+W0MaiAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMVGa9yQcehRtSGLeRAgEQgDsCtQVhBIa6dW6xqmEOmTJvDLaCuIEBUh9//y2CLfVYkDEfNGmZKSehzOFyXA2gtvUPKxajS//qMMRi7g==
           aws_profile: ""
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-11-07T22:33:08Z"
-    mac: ENC[AES256_GCM,data:L11PxY1kwlXdJK9/uVSQ6aZis5TJ6lJfFld+/KxrZ4Y0hohxVBTe3CRw8JmUlZaL0LrG2BodhEQBBdYZbdC7i2w62GOFrPgIXicW1oE1FVYk5Wn6EfKSaWQ3HerjXoJXRBA9EfJO8/y3GWePOp2weq8pb5pC6IN7Ig/GZ31E+3E=,iv:SJrwIcpaGG0ExgUtk06QUg6yNx47b3vxq3wHyPbVuHU=,tag:FkB5VRh3RJcZJoV66DEYcg==,type:str]
+    lastmodified: "2025-12-20T17:02:06Z"
+    mac: ENC[AES256_GCM,data:W62JVa6mCycaNqXJkzB7hh3AaDTNcWVNq4KJLAihiMjtI9E7xlSyrbS3k3BJI0Ik28k5wPBI36i/ZQjbtTpjtmkhPywgbOilxIaYg2Xp4dn6jbIpySHyzhy1TqVbEiOPzrrOdkSvo198E79FQmNBB5sBTYFLmHiQEryylbnYdKo=,iv:xikLhYcQDxW7ib8kG0gnwzT1TDHgLtt5Sx0C0t0uch8=,tag:LrLPI3nSR0DR7tkcS2NbYg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData|apiVersion|metadata|kind|type)$
     version: 3.8.1
