--- a/platform/ai/k8s/integrations/openwebui/httproute.yaml
+++ b/platform/ai/k8s/integrations/openwebui/httproute.yaml
@@ -8,7 +8,7 @@ metadata:
     external-dns.alpha.kubernetes.io/hostname: openwebui.homelab.internal
 spec:
   parentRefs:
-  - name: homelab-gateway
+  - name: homelab-internal-gateway
     namespace: kube-system
   hostnames:
     - openwebui.homelab.internal
