--- a/platform/ai/k8s/llm-providers/nim/models/llama-3.2-3b-instruct.yaml
+++ b/platform/ai/k8s/llm-providers/nim/models/llama-3.2-3b-instruct.yaml
@@ -1,6 +1,4 @@
 ---
-# ModelConfig for NVIDIA NIM Llama 3.2 3B Instruct
-# This configuration is used by kagent for model discovery
 apiVersion: kagent.dev/v1alpha2
 kind: ModelConfig
 metadata:
@@ -10,7 +8,7 @@ metadata:
     app: nvidia-nim
     component: model-config
 spec:
-  provider: OpenAICompatible
+  provider: OpenAI
   model: meta/llama-3.2-3b-instruct
-  config:
+  openAI:
     baseUrl: http://nim.ai.svc.cluster.local:8000/v1
