Feature/openwebui speech (#75)
* save

* setup route for nim

* save

* save

* fix route to openwebui

* pin at 6.0.0

--- a/kubernetes/apps/security/cert-manager/secrets.enc.yaml
+++ b/kubernetes/apps/security/cert-manager/secrets.enc.yaml
@@ -1,25 +1,25 @@
-apiVersion: ENC[AES256_GCM,data:eOk=,iv:RRIjlJyEmkJvHkI9owW0JobThVn3yAk/KaqgUWHEm9M=,tag:7TPmk7gbq8pluKLmSq3/4g==,type:str]
-kind: ENC[AES256_GCM,data:J27rDyCL,iv:OoDEE6KPwxourNzeuHEKZDneMZGnd+kCMQOFgX+vpeI=,tag:IqrZzqBhfRrs92SYkpiA9g==,type:str]
+apiVersion: ENC[AES256_GCM,data:Kec=,iv:4whnUSnOcjdKz0xm5y2/W7b4CtVOi09uEhgaFhyU+h0=,tag:aM5M6GZBaygynPKVRqVHBA==,type:str]
+kind: ENC[AES256_GCM,data:8YJfC9GZ,iv:XoWQY5Nx1UrRr5BL74QyPmS7I3mikiVXj+b7ir0kYP8=,tag:R/OdMm7epUrsM8uRtF5QtQ==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:l6aprUUDZl07I5ZIXFr9Z+ljY6dRtYioew==,iv:D5LeqjnDxHv7a/9bS0r9RI4lRDZRudDlrciNKqytaHw=,tag:9GuFXFt3XpGmCiIgGWO2HQ==,type:str]
+    name: ENC[AES256_GCM,data:Xe8B/ZpWCQQy/zKiglm695tEmro89DgltA==,iv:5JtAMUqIkZ+wmwuSEi+cuLieG3hgHBeGtSdlMS7GKvY=,tag:AIme5eKCYNzkdiNrsFJKNA==,type:str]
     annotations:
-        reflector.v1.k8s.emberstack.com/reflection-auto-enabled: ENC[AES256_GCM,data:72SL5Q==,iv:Mz7Sxv/2mWnc/gZ0buHhNlHSFz4bvjq9Ec4e6ae1lKE=,tag:GCGeS1XnuGtzDj59i4JSVw==,type:str]
-        reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: ENC[AES256_GCM,data:PSDROg==,iv:fkPbpV+sKrYPSYNgKas3Zt6t7KdN7TqbcS2+0/muVpA=,tag:pMvibZAcYBT0CEz/7qB+Sg==,type:str]
-type: ENC[AES256_GCM,data:n55CeoHu,iv:1LVjayHER5DO/abujchdWmH1SHem0wrzWu5Gotan+Ho=,tag:cLWP+9cTxtx2q1Qtyyf4Bw==,type:str]
-data:
-    CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:n0dk3rD2fWol7S/dveTf2SCU7ARXe4f59TwYDCEafUEXiYsmjA==,iv:3Db5m71+/wjygrawv5D77RSkWDHQe2YoQskTnHHv8SY=,tag:ALHwAhrZf2AsbtgWgCFWrw==,type:str]
+        reflector.v1.k8s.emberstack.com/reflection-auto-enabled: ENC[AES256_GCM,data:xbt2cQ==,iv:kPAaUEuPl4rXd4NSc6iyV8tu5V660eZ0QWuDsrHSvUY=,tag:PbLA0zMB0P5OL4Q6DvpPHQ==,type:str]
+        reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: ENC[AES256_GCM,data:idh1Uw==,iv:jhdv0Ajl9wlaDLUuDMm2dtNWKLuzoOsnzgB43WM6VYs=,tag:luB/h0cBvGmk7qVcu9A+yA==,type:str]
+type: ENC[AES256_GCM,data:nj7/Bo2o,iv:Okw3iAkeK1nypXFCtqOoRgr28xmgyFg8oRv3MkMYSrc=,tag:M9ZURPXPCgBSj7uGM67w5g==,type:str]
+stringData:
+    CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:FNokSVDZPc9FnTXg4uVnbIhJF3Qs5VG/GT5m8rLkamIw2k3XjA==,iv:agpWCLa7QuzxTwM4jSD6o0TT/TxSTfeG536/X3hSX9E=,tag:7yh8ojtrxBnsziOIaVz9og==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28
-          created_at: "2025-12-16T21:32:38Z"
-          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAGRTAx3V0dABBsHfN6e6+PEAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMIczm4PSOGI+mb1a3AgEQgDs01oS2Q6f4vHLB/9lKLCqqVxj43Ynh5Y85os76xERAUDUl6pRtce6tak+fXP4BKiwxbU2bD1Vpl9GjAg==
+          created_at: "2025-12-21T16:25:37Z"
+          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAEejvtycKYFCyVFoNkwTYxbAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMyVazNn2aWmQ8ZGIRAgEQgDs74uHtHOFJitnsrSvdJwHBe/1gR6CIv7GxxrOAV2wSvWqWS1p3X0JgqD+ta2kNv72xlhxuWPd6Xw/bHg==
           aws_profile: ""
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-12-16T21:32:38Z"
-    mac: ENC[AES256_GCM,data:Ql9z38Coa61kD7PZlm0sZTqRhF31YTFQJKAc7PzD0hFa5LV569zunWniFLstwTsflR3QaPXhIgb/pF+hYz8B9kKUici1eaIuHKOYCPJYr8xnwCHQ3k+XS/UD/ikfoAPYPZ7l2WiQUpLqDjgXXuZ+FJnnJjblwvPIlDBog+8uPy0=,iv:x+yK0hTs6zlQB1yIy6Kg9kJnYE/SNQ70MfsJZL5DBEo=,tag:j7xKJeIBPxkpsyu08C5uHw==,type:str]
+    lastmodified: "2025-12-21T16:25:37Z"
+    mac: ENC[AES256_GCM,data:PcYQcew9j4aM60sxJM9jgrPOwKN0uTgo5KxX2jDu6Ro73AsOZ6kBT8iJEE336s4TWALEq0xwiWpCI6dws67b5z0m0G5c/07o3L+6jRB6jwixsT1s23vBLftxv9WLmaBR9bFkr4j9J+7PHdqZiZGw1zCKwzEix2x8eBjyE74zaCg=,iv:96ZBTBaUMN1VHeaQtbXDTrlGMmUlRaSLcovpfcbym44=,tag:iFUN9pFdYMK0iNxaXUoPgQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData|apiVersion|metadata|kind|type)$
     version: 3.8.1
