--- a/platform/ai/k8s/integrations/openedai-speech/kustomization.yaml
+++ b/platform/ai/k8s/integrations/openedai-speech/kustomization.yaml
@@ -1,5 +1,7 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: ai
 resources:
-  - llama-3.2-3b-instruct.yaml
+  - deployment.yaml
+  - service.yaml
