--- a/platform/ai/k8s/kustomization.yaml
+++ b/platform/ai/k8s/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - gateway.yaml
   - storage
   - llm-providers
+  - integrations
   - ui-http-route.yaml
 helmCharts:
   - name: kagent
