--- a/platform/ai/k8s/llm-providers/nim/kustomization.yaml
+++ b/platform/ai/k8s/llm-providers/nim/kustomization.yaml
@@ -32,11 +32,11 @@ helmCharts:
       resources:
         requests:
           cpu: "2"
-          memory: "4Gi"
+          memory: "10Gi"
           nvidia.com/gpu: 1
         limits:
           cpu: "8"
-          memory: "16Gi"
+          memory: "14Gi"
           nvidia.com/gpu: 1
       persistence:
         enabled: true
@@ -87,6 +87,10 @@ helmCharts:
           value: "meta/llama-3.2-3b-instruct"
         - name: NIM_MAX_MODEL_LEN
           value: "8192"  # Reduced from 131K to fit RTX 4070 Super 12GB VRAM, 16384 for 10GB VRAM, currently 8GB VRAM
+        - name: NIM_MAX_NUM_SEQS
+          value: "128"
+        - name: NIM_GPU_MEMORY_UTILIZATION
+          value: "0.85"  # Use 85% VRAM max
       podAnnotations:
         kubernetes.io/egress-bandwidth: "1G"
         kubernetes.io/ingress-bandwidth: "1G"
