--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -37,7 +37,7 @@ tasks:
         vars: { CONTROL_PLANE: $MASTER_NODE_IP}
       - task: kubernetes:bootstrap-cluster
       - task: kubernetes:sync-cluster
-      - task: kubernetes:test-cluster
+      - task: kubernetes:wait-for-external-certificate
       - task: kubernetes:copy-kubeconfig
       - task: platform:deploy
       - task: platform:test
